--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,28 @@
 body {
   color: #333;
   font-family: Helvetica, Arial, sans-serif;
-  background-color: skyblue; /* Sanity Check! */
+  background-color: black; /* Sanity Check! */
 }
 
-input {
+button, input {
   display: block;
-  width: 30%;
   font-size: 2em;
   margin: 0 auto;
   position: fixed;
   top: 10%;
+}
+
+input {
+  width: 30%;
   left: 35%;
+}
+
+button {
+  left: 65%;
+}
+
+button:hover{
+  background-color: white;
 }
 
 @media all and (max-width: 600px) {
